[package]
name = "fallacy-alloc"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"
authors = ["David Li <davidli2010@foxmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A library for fallible allocation."
keywords = ["fallible", "alloc", "allocation"]
repository = "https://github.com/fallacy-rs/fallacy-alloc.git"
homepage = "https://github.com/fallacy-rs/fallacy-alloc"
documentation = "https://docs.rs/fallacy-alloc/"

[build-dependencies]
rustversion = "1.0.6"
